--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+    background-color: #ffffff;
+}
+
 body {
     margin: 0px;
     padding: 0px;
@@ -26,6 +30,8 @@ header img {
     border-radius: 100px;
 }
 
+
+
 .flex-item {
     background-color: #ffffff;
     border-radius: 30px;
@@ -37,8 +43,22 @@ header img {
     text-align: center;
 }
 
+
+
 footer {
     background-color: #ffffff;
     padding: 5px 20px;
     margin-top: 50px;
+}
+
+@media screen and (min-width: 768px) {
+    .flex-container {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    .flex-item {
+        width: 40%;
+    }
 }
